--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-/* MeghDoot Textiles Design System - Professional B2B Wholesale Platform */
+/* Meghdoot Textiles Design System - Professional B2B Wholesale Platform */
 
 @layer base {
   :root {
